--- a/accounts-prod.properties
+++ b/accounts-prod.properties
@@ -1,5 +1,5 @@
-accounts.msg =Welcome to the EazyBank Accounts Prod application
-accounts.build-version=1
+accounts.msg =Welcome to the Lootne wala Bank Accounts Prod application
+accounts.build-version=152
 
 accounts.mailDetails.hostName=prod-accounts@eazybytes.com
 accounts.mailDetails.port=9010
